# LittleHydra

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_example_binaries.sh  config.toml.sample
.cargo/: config.toml
assets/dotnet_loader_task/: AssemblyLoadTask.proj
examples/: dotnet_msbuild.xml  example.bat  example.ps1
examples_srcs/dotnet_program/: Program.cs
examples_srcs/rust_program/: Cargo.toml
examples_srcs/rust_program/src/: main.rs
src/: assets.rs  cli.rs  config.rs  dotnet.rs  error.rs  firewall.rs  impersonate.rs  main.rs  pe.rs  power.rs  process_log_writer.rs  process_manager.rs  process_spawner.rs  rpc.rs  tcp_log_writer.rs
