[package]
name = "little-hydra"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
log = "0.4"
flexi_logger = "0.25"
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.8"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Environment",
    "Win32_System_Diagnostics_Debug",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_NetworkManagement_WindowsFilteringPlatform"
]}
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5.40", features = ["derive"] }

[features]
default = ["network_server"]
network_server = []
